FractalJDE 5.41.0
A bundle holds its program and nothing beside it.

Contents/Fractal carried two shell scripts next to the executable, a .sh and a .cmd, each
starting the loader on the program. Nothing on the volume ever ran either of them. The
desktop starts a program by building that command itself and handing the loader the
Mach-O; launchd does the same for the metadata server; windowsLauncher() had no caller
outside a check. They were a second way to start a program, able to go wrong on its own,
and not what a bundle looks like on the system this imitates.

The one live use was the fallback in Bundles.open, taken by a process with no AppKit in
it, which asked Windows to run the .cmd. That command is now written in one place, by the
loader, since there is one right answer to it and it was being written out twice. The
fallback starts a program through it; a bundle naming no principal class wraps something
of the host's and is still handed to the host.

With the launchers goes the launchArguments a bundle was built with, which existed only
to be baked into them, and executable(), which differed from machOExecutable() only in
preferring the .cmd. Anything left beside an executable is deleted as a bundle is written,
so a volume that has been upgraded rather than made fresh loses them too. Two checks now
say Contents/Fractal holds one file, which is the rule rather than a description.

usr/bin keeps its launchers: a foreign shell has no other way to run a Mach-O.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>